classDiagram
    direction LR

    class BaseResetPasswordNotification {
        <<abstract>>
        #string token
        #getRoleName()* string
        #resolveRouteName(notifiable)* string
        +resetUrl(notifiable) string
        +toMail(notifiable) MailMessage
    }
    class AdminResetPasswordNotification {
        +ROUTE_NAME string = "admin.password.reset"
        #getRoleName() string
        #resolveRouteName(notifiable) string
    }
    class PenyewaResetPasswordNotification {
        +ROUTE_NAME string = "password.reset"
        #getRoleName() string
        #resolveRouteName(notifiable) string
    }

    class ReservasiPolicy {
        +view(User, Reservasi) bool
        +chat(User, Reservasi) bool
        +pay(User, Reservasi) bool
        +update(User, Reservasi) bool
    }
    class TagihanPolicy {
        +view(User, Tagihan) bool
        +pay(User, Tagihan) bool
    }
    class PembayaranPolicy {
        +downloadNota(User, Pembayaran) bool
    }
    class KeluhanPolicy {
        +view(User, Keluhan) bool
    }

    class NotificationMail {
        +string subjectStr
        +string viewName
        +array viewData
        +envelope() Envelope
        +content() Content
    }
    class TagihanBulanMail {
        +Tagihan tagihan
        +envelope() Envelope
        +content() Content
    }

    class HandlesReservationSession {
        <<trait>>
        #getReservationSessionKeys() array
        #storeReservationSessionState(Request) string
    }
    class SanitizesCurrency {
        <<trait>>
        +formatCurrency(nominal) string
    }
    class Sanitizer {
        +static currency(value) mixed
        +static phoneNumber(value) string
        +static email(value) string
    }

    class User
    class Reservasi
    class Tagihan
    class Pembayaran
    class Keluhan

    AdminResetPasswordNotification --|> BaseResetPasswordNotification : Extends
    PenyewaResetPasswordNotification --|> BaseResetPasswordNotification : Extends

    ReservasiPolicy ..> Reservasi : Authorizes
    TagihanPolicy ..> Tagihan : Authorizes
    PembayaranPolicy ..> Pembayaran : Authorizes
    KeluhanPolicy ..> Keluhan : Authorizes
    ReservasiPolicy ..> User : Subject
